Updated post css file to fix <h1> elements rendering in the wrong color

--- a/live-static/static-root/posts/css/posts.css
+++ b/live-static/static-root/posts/css/posts.css
@@ -270,7 +270,6 @@ body {
 h1 {
 
     font-family: 'Nova Flat', sans-serif;
-    color: white
 }
 
 p {
